Add info and camera constraints

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-	<meta property="og:title" content="Water - ThreeJS WebGPU Experiment - holtsetio.com" />
-    <meta property="og:image" content="https://holtsetio.com/img/lab/softbodies.jpg" />
-    <title>Water - ThreeJS WebGPU Experiment - holtsetio.com</title>
+	<meta property="og:title" content="Enigma - ThreeJS WebGPU Experiment - holtsetio.com" />
+    <meta property="og:image" content="https://holtsetio.com/img/lab/enigma.jpg" />
+    <title>Enigma - ThreeJS WebGPU Experiment - holtsetio.com</title>
     <style>
       html,
       body {
