--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+                                                                              <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -67,6 +67,6 @@
     <div id="progress-bar"><div id="progress"></div></div>
     <div id="error"></div>
   </div>
-  <script src="./index.js" type="module"></script>
+  <script src="./index.ts" type="module"></script>
 </body>
 </html>
