--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-                                                                              <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -19,6 +19,7 @@
       width: 100%;
       height: 100%;
       display: block;
+      position: relative;
     }
     #veil {
       position: absolute;
@@ -62,11 +63,7 @@
   <script defer src="https://s.holtsetio.com/script.js" data-website-id="cb36fa92-2381-4031-8f81-f430a473156d"></script>
 </head>
 <body>
-<div id="container">
-  <div id="veil">
-    <div id="progress-bar"><div id="progress"></div></div>
-    <div id="error"></div>
-  </div>
-  <script src="./index.ts" type="module"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
